--- a/prisme-interacte13122021.ipynb
+++ b/prisme-interacte13122021.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "74c126ca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "977031fbce80489fbfb123449e0d9b4a",
+       "model_id": "eef4d7dab88649ebaed54cb0c51b49c9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -28,7 +28,7 @@
     "#from defs_optique import dessine_rapporteur\n",
     "from numpy import *\n",
     "# ajout curseur et bouton\n",
-    "#from matplotlib.widgets import Slider, Button\n",
+    "from ipywidgets import Button\n",
     "from ipywidgets import interactive\n",
     "\n",
     "n = 1.5                     # indice de réfraction\n",
@@ -66,7 +66,6 @@
     "        # mettre le rayon réfléchi en cas de réflexion totale\n",
     "        x6 = x[2] - 0.3*cos(alpha2-2*theta2prime)  # point P6 pour rayon réfléchi à revoir !\n",
     "        y6 = y[2] - 0.3*sin(alpha2-2*theta2prime)  # point P6 pour rayon réfléchi\n",
-    "        #reftot.set_data([x[2], x6],[y[2], y6])\n",
     "\n",
     "        if(abs(n*sin(theta2prime))<1):  # si pas de réflexion totale\n",
     "            theta2 = arcsin(n*sin(theta2prime))\n",
@@ -83,76 +82,41 @@
     "    # angle de déviation\n",
     "    if normale2 == True :\n",
     "        D = (alpha1 - alpha3)*180/pi\n",
-    "        #print(\"Déviation\", D) # à revoir \n",
     "    else :\n",
     "        D = 0\n",
-    "\n",
-    "    # les points P\n",
-    "    #print(x, y, normale2)\n",
-    "    # affiche le rayon\n",
-    "    #line.set_data(x, y)\n",
-    "    # afficher la normale entrante et sortante\n",
-    "    #norm1.set_data([x[1]+0.5*cos(A/2),x[1]-0.5*cos(A/2)], [y[1]-0.5*sin(A/2), y[1]+0.5*sin(A/2)])\n",
-    "    #norm2.set_data([x[2]+0.5*cos(A/2),x[2]-0.5*cos(A/2)], [y[2]+0.5*sin(A/2), y[2]-0.5*sin(A/2)])\n",
-    "    # afficher prisme\n",
-    "    #prisme.set_data([0, -1*p, 1*p, 0],[0, -1, -1, 0])\n",
-    "    # prolongation du rayon incident\n",
-    "    #prol.set_data([x1, x5],[y1, y5])\n",
-    "    #plt.draw()\n",
-    "    return(x, y, normale2, D,x5,y5,x6,y6)\n",
+    "        \n",
+    "    return(x, y, normale2, D, x5, y5, x6, y6)\n",
     "\n",
     "    \n",
     "def update(angleA, indice, angle):\n",
+    "    # tracé du prisme et du rayon\n",
     "    n = indice\n",
     "    A = angleA*pi/180\n",
     "    theta1 = angle*pi/180\n",
     "    #print(n, A*180/pi, theta1*180/pi)\n",
-    "    (x, y, normale2, D,x5,y5,x6,y6) = rayon(n, A, theta1)\n",
+    "    (x, y, normale2, D, x5, y5, x6, y6) = rayon(n, A, theta1)\n",
     "    fig, ax = plt.subplots(figsize=(10,5))\n",
     "    ax.axis('equal')\n",
+    "    plt.xlim(-1.2,1.2)\n",
+    "    plt.ylim(-1.1,0.1)\n",
     "    p = tan(A/2)\n",
     "    # tracé du prisme en fonction de A à travers p=tan(A/2)\n",
-    "    prisme = ax.plot([0, -1*p, 1*p, 0],[0, -1, -1, 0], c='b')\n",
+    "    prisme = ax.plot([0, -1*p, 1*p, 0],[0, -1, -1, 0], c ='b')\n",
     "    # définition du rayon et des normales entrante et sortante\n",
-    "    line = ax.plot(x,y,c='g')\n",
-    "    norm1 = ax.plot([x[1]+0.5*cos(A/2),x[1]-0.5*cos(A/2)], [y[1]-0.5*sin(A/2), y[1]+0.5*sin(A/2)], linestyle='dashed', c='k')\n",
-    "    norm2 = ax.plot([x[2]+0.5*cos(A/2),x[2]-0.5*cos(A/2)], [y[2]+0.5*sin(A/2), y[2]-0.5*sin(A/2)], linestyle='dashed', c='k')\n",
+    "    line = ax.plot(x,y,c ='g')\n",
+    "    norm1 = ax.plot([x[1]+0.5*cos(A/2),x[1]-0.5*cos(A/2)], [y[1]-0.5*sin(A/2), y[1]+0.5*sin(A/2)], \n",
+    "                    linestyle='dashed', c ='k')\n",
+    "    norm2 = ax.plot([x[2]+0.5*cos(A/2),x[2]-0.5*cos(A/2)], [y[2]+0.5*sin(A/2), y[2]-0.5*sin(A/2)], \n",
+    "                    linestyle='dashed', c ='k')\n",
     "    # prolongation rayon incident pour voir déviation\n",
-    "    prol = ax.plot([x[1], x5],[y[1], y5], linestyle='dashed', c='r')\n",
+    "    prol = ax.plot([x[1], x5],[y[1], y5], linestyle='dashed', c ='r')\n",
     "    # rayon réfléchi si réflexion totale\n",
-    "    reftot = ax.plot([x[2], x6],[y[2], y6], c=\"g\")\n",
+    "    reftot = ax.plot([x[2], x6],[y[2], y6], c =\"g\")\n",
     "    # affichage de l'angle de déviation\n",
-    "    plt.text(-0.5, 0.2, \"Angle de déviation (°) =\")\n",
-    "    dev = plt.text(0.7, 0.2, round(D,3))\n",
-    "    #dev.set_text(round(D,3))\n",
-    "    #fig.canvas.draw_idle()\n",
+    "    plt.text(0, 0.2, \"Angle de déviation (°) =\")\n",
+    "    dev = plt.text(0.7, 0.2, round(D,2))\n",
     "    plt.show()\n",
     "\n",
-    "\n",
-    "# ajout curseur angle A angle d'incidence indice prisme\n",
-    "#ax_angleA = plt.axes([0.3, 0.15, 0.6, 0.03])\n",
-    "#s_angleA = Slider(ax_angleA, \"Angle au sommet A en °\", 30, 70, valinit=60)\n",
-    "#ax_indice = plt.axes([0.3, 0.1, 0.6, 0.03])\n",
-    "#s_indice = Slider(ax_indice, \"indice du prisme\", 1.2, 1.8, valinit=1.5)\n",
-    "#ax_angle = plt.axes([0.3, 0.05, 0.6, 0.03])\n",
-    "#s_angle = Slider(ax_angle, \"angle d'incidence en °\", 0, 90, valinit=theta1*180/pi)\n",
-    "\n",
-    "# remise à l'initial des paramètres\n",
-    "#resetax = plt.axes([0.1, 0.9, 0.1, 0.04])\n",
-    "#button = Button(resetax, 'Reset')\n",
-    "\n",
-    "def reset(event):\n",
-    "    s_indice.reset()\n",
-    "    s_angleA.reset()\n",
-    "    s_angle.reset()\n",
-    "\n",
-    "#button.on_clicked(reset)\n",
-    "\n",
-    "#s_indice.on_changed(update)\n",
-    "#s_angleA.on_changed(update)\n",
-    "#s_angle.on_changed(update)\n",
-    "\n",
-    "#plt.show()\n",
     "\n",
     "interactive_plot = interactive(update, angleA=(30, 70, 1), indice=(1.2, 1.8, .1), angle=(0, 90, 1))\n",
     "interactive_plot\n"
